--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,3 @@
 {
-    "CommandService": "http://commands-cluster-ip-srv:80"
+    "CommandService": "http://commands-cluster-ip-srv:80/api/c/Platforms"
 }
