--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,7 @@
 {
-    "CommandService": "http://commands-cluster-ip-srv:80/api/c/Platforms"
+    "CommandService": "http://commands-cluster-ip-srv:80/api/c/Platforms",
+    "ConnectionStrings": 
+    {
+        "PlatformsConn": "Server=mssql-cluster-ip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=password;"
+    }
 }
