message bus publisher

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -3,5 +3,7 @@
     "ConnectionStrings": 
     {
         "PlatformsConn": "Server=mssql-cluster-ip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=password;"
-    }
+    },
+    "RabbitMQHost": "rabbitmq-cluster-ip-srv",
+    "RabbitMQPort": 5672
 }
